# php-java-bridge

./: .classpath  .cvsignore  .project  ABOUT.HTM  CREDITS  CVS_RELEASE.sh  Cache.java  ChangeLog  FAQ.html  INSTALL  INSTALL.J2EE  INSTALL.J2SE  INSTALL.LINUX  INSTALL.MONO+NET  INSTALL.ORACLE  INSTALL.SERVLET  INSTALL.STANDALONE  INSTALL.WEBSPHERE  INSTALL.WINDOWS  LICENSE  Makefile.frag  NEWS  PROTOCOL.TXT  README  README.GCJ  README.GNU_JAVA  README.MONO+NET  RPM-GPG-KEY  VERSION  api.c  api.h  bind.c  build.xml  cache.php  client.c  config.m4  init_cfg.c  init_cfg.c.in  init_cfg.h.in  install.sh  (+41 more)
server/: .project  60JavaBridge.policy  JavaBridge.java  Makefile.am  Makefile.in  Makefile_unix.am  Makefile_windows.am  PHPDocConfig.ini  RunJavaBridge.c.in  RunMonoBridge.c.in  TestInstallation.java  acinclude.m4  append.sed  autogen.sh  buildCgi.sh  buildClassFromTextFile.php  buildJavaBridgeProperties.sh  buildJavaInc.php  buildJavaInc.sh  buildJavaIncJava.sh  buildJavaProxy.php  buildJavaProxyPhp.sh  buildJavaProxyPhpJava.sh  buildLauncherUnix.sh  buildLauncherWindows.sh  buildPhpDebuggerPHPJava.sh  configure.gnu.in  configure.in  example-web.xml  extract.sed  header.sed  itext4php.spec  java.c  javabridge.policy  javadoc.xml  lucene4php.spec  merge.awk  natcJavaBridge.c  prepend.sed
server/WEB-INF/: faces-config.xml  web.xml
server/WEB-INF/cgi/: README  launcher.c  launcher.sh  php-cgi-i386-freebsd  php-cgi-i386-linux  php-cgi-i386-linux.ini  php-cgi-x86-sunos  php-fcgi.sh  php.ini  rename_to_php-cgi-i386-linux.ini  rename_to_php-cgi-i386-linux.sh  rename_to_php-cgi-x86-linux.sh
server/documentation/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  serialized-form.html
server/documentation/API/: TestInstallation.html  about.html  all-classes.html  all-packages.html  allclasses-frame.html  allclasses-noframe.html  alphaindex-1.html  alphaindex-10.html  alphaindex-11.html  alphaindex-12.html  alphaindex-13.html  alphaindex-14.html  alphaindex-15.html  alphaindex-16.html  alphaindex-17.html  alphaindex-18.html  alphaindex-19.html  alphaindex-2.html  alphaindex-20.html  alphaindex-21.html  alphaindex-22.html  alphaindex-3.html  alphaindex-4.html  alphaindex-5.html  alphaindex-6.html  alphaindex-7.html  alphaindex-8.html  alphaindex-9.html  blank.html  classtrees_JavaBridge.html  constant-values.html  deprecated-list.html  deprecated.html  elementindex.html  elementindex_JavaBridge.html  errors.html  help-doc.html  index-noframes.html  index.html  li_JavaBridge.html  (+12 more)
server/documentation/API/JavaBridge/: Java.html  JavaException.html  _Client.inc.html  _GlobalRef.inc.html  _JavaBridge.inc.html  _JavaProxy.inc.html  _NativeParser.inc.html  _Options.inc.html  _Parser.inc.html  _Protocol.inc.html  _SimpleParser.inc.html  java_JavaType.html
server/documentation/API/__filesource/: fsource_JavaBridge__Client.inc.html  fsource_JavaBridge__GlobalRef.inc.html  fsource_JavaBridge__JavaBridge.inc.html  fsource_JavaBridge__JavaProxy.inc.html  fsource_JavaBridge__NativeParser.inc.html  fsource_JavaBridge__Options.inc.html  fsource_JavaBridge__Parser.inc.html  fsource_JavaBridge__Protocol.inc.html  fsource_JavaBridge__SimpleParser.inc.html
server/documentation/API/class-use/: TestInstallation.SimpleBrowser.html  TestInstallation.html
server/documentation/API/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-22.html  index-23.html  index-24.html  index-25.html  index-26.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
server/documentation/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-22.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
server/documentation/javax/script/: AbstractScriptEngine.html  Bindings.html  Compilable.html  CompiledScript.html  Invocable.html  ScriptContext.html  ScriptEngine.html  ScriptEngineFactory.html  ScriptEngineManager.html  ScriptException.html  SimpleBindings.html  SimpleScriptContext.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
server/javax/script/: AbstractScriptEngine.java  Bindings.java  CompiledScript.java  Invocable.java  ScriptContext.java  ScriptEngine.java  ScriptEngineFactory.java  ScriptEngineManager.java  SimpleBindings.java  SimpleScriptContext.java
server/javax/script/http/: HttpScriptContext.java  HttpScriptRequest.java  HttpScriptServlet.java  SimpleHttpScriptContext.java
server/php/java/bridge/: .cvsignore  AppThreadPool.java  Base64EncodingOutputBuffer.java  BaseThreadPool.java  BlockingQueue.java  ChainsawLogger.java  ClassicJavaBridgeClassLoader.java  ClassicParserString.java  ClassicResponse.java  ConstructorCache.java  Context.java  ContextManager.java  DefaultOptions.java  DynamicClassLoader.java  DynamicHttpURLConnectionHandler.java  DynamicJarURLConnection.java  DynamicJavaBridgeClassLoader.java  FileLogger.java  GlobalRef.java  HexOutputBuffer.java  IDocHandler.java  IJavaBridgeFactory.java  ILogger.java  IManaged.java  ISession.java  ISocketFactory.java  IllegalArgumentException.java  IntegerComparator.java  Invocable.java  JarLibraryPath.java  JavaBridge.java  JavaBridgeClassLoader.java  JavaBridgeFactory.java  JavaBridgeIllegalArgumentException.java  JavaBridgeIllegalStateException.java  (+41 more)
server/test/: Discovery.java  HelloWorld.java  HelloWorld.php  HelloWorld2.java  InteractiveRequestAbort.java  README  Script.java  SwingTest.java  SwingTest.php  TestException.java  TestExceptionInvocable.java  TestExceptionInvocable2.java  TestInvocable.java  TestServlet.java  Utf8.java  cli.java
(+1649 files in other folders)
